--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kinfei.github.io/timezone-selections",
+  "homepage": "https://kinfei.github.io/timezone-selections/",
   "name": "timezone",
   "version": "0.1.0",
   "private": true,
